# Light-Bot

./: .gitignore  README.md  channel.txt  main.py  pyproject.toml  requirements.txt
Cogs/: api.py  help.py  listeners.py  music.py  owner.py  rng.py  staff.py  user.py
Lavalink/: application.yml  ecosystem.json
Utils/: checks.py  context.py  converters.py  formats.py  paginator.py  time.py
light/: __init__.py  __main__.py  _config.py  utils.py
light/bot/: __init__.py
light/bot/cogs/: __init__.py  listeners.py  owner.py  staff.py  steam.py
light/bot/cogs/utils/: __init__.py  checks.py  context.py  converters.py  formats.py  help.py  logger.py  paginator.py
light/cogs/: __init__.py  help.py  listeners.py  music.py  owner.py  staff.py  steam.py
light/cogs/utils/: checks.py  context.py  converters.py  db.py  formats.py  logger.py  paginator.py  time.py  typings.py
light/db/: __init__.py  table.py
light/web/: __init__.py  router.py
light/web/templates/: index.j2  login_success.j2
light/web/types/: __init__.py
