[tool.poetry]
name = "light"
version = "0.1.0"
description = "A Discord bot for people who use Steam"
authors = ["James <gobot1234yt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
steamio = {git = "https://github.com/Gobot1234/steam.py"}
donphan = {git = "https://github.com/bijij/donphan"}
discord-ext-menus = {git = "https://github.com/bijij/discord-ext-menus", branch = "feature/typing"}
discord-ext-alternatives = "^2021.4.13"
humanize = "^3.6.0"
# matplotlib = "^3.4.2"
jishaku = "^2.0.0"
fastapi = "^0.65.2"
typer = "^0.3.2"
uvloop = "^0.15.2"
uvicorn = "^0.14.0"
Jinja2 = "^3.0.0"
python-multipart = "^0.0.5"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
atomic = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
